svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pacman
  name: pacman
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: pacman
  type: ClusterIP
status:
  loadBalancer: {}
